--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/xiangmingcai/JSWriteFCS/issues"
   },
   "devDependencies": {
-    
+    "fcs": "^0.1.3"
   },
   "dependencies": {
     "fcs": "^0.1.3"
